[project]
name = "self-multi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.1.0",
    "grandalf>=0.8",
    "ipython>=8.31.0",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.33",
    "langchain-openai>=0.3.3",
    "langgraph>=0.2.69",
    "openmeteo-requests>=1.3.0",
    "pandas>=2.2.3",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]
